# libdotbc

./: Cargo.toml  LICENSE  README.md
src/c/: dotbc.h
src/rs/: lib.rs  main.rs
src/rs/cmd/: ls_files.rs  mod.rs  read_file.rs  show_metadata.rs  write_file.rs
test/rs/: mod.rs  test_dotbc.rs
