[package]
name = "dotbc"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[lib]
name = "dotbc"
path = "src/rs/lib.rs"

[[bin]]
name = "dotbc"
path = "src/rs/main.rs"

[dependencies]
zip = "0.1.18"
docopt = "0.6.82"
rustc-serialize = "0.3"

[dev-dependencies]
tempdir = "0.3.5"

[[test]]
name = "test"
path = "test/rs/mod.rs"
